ui: help: Fix alignment issue with footer links in about page

--- a/static/themes/default/css/main.css
+++ b/static/themes/default/css/main.css
@@ -922,6 +922,10 @@ input[type='submit'].running-status-button {
     visibility: hidden;
 }
 
+.help-about-links > section {
+    margin-top: 2rem;
+}
+
 .help-about-links h2 {
     font-size: 1rem;
     font-weight: bold;
